--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-
-motor==3.0.0
-uvicorn==0.18.3
+anyio==3.6.1
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
 fastapi==0.85.0
-pydantic
-python-dotenv
-pymongo[srv]
+h11==0.14.0
+idna==3.4
+motor==3.0.0
+pydantic==1.10.2
+pymongo==4.2.0
+python-decouple==3.6
+python-dotenv==0.21.0
+requests==2.28.1
+sniffio==1.3.0
+starlette==0.20.4
+typing_extensions==4.3.0
+urllib3==1.26.12
+uvicorn==0.18.3
+(venv) TERRA:Proje
